--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3512/3512879.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -3756,6 +3759,64 @@
     </div>
   </div>
 </div>
+
+
+    <div class="container-fluid main5">
+      <center>
+        <h2>OUR CLIENTS FEEDBACK</h2>
+
+
+        <img src="img/114.jpg" alt="" class="d6">
+        <img src="img/115.jpg" alt="" class="d6">
+        <img src="img/116.jpg" alt="" class="d6">
+        <img src="img/117.jpg" alt="" class="d6">
+        <img src="img/118.jpg" alt="" class="d6">
+        <img src="img/119.jpg" alt="" class="d6">
+
+
+        <p>Credibly envisioneer enterprise-wide content before resource maximizing leadership skills. <br>
+           Progressively visualize professional value via distributed value. Efficiently restore adaptive <br>
+            bandwidth through best-of-breed outsourcing. Appropriately redefine professional sources with <br>
+            extensible strategic theme areas. Progressively exploit plug-and-play ROI and excellent platforms</p>
+
+
+            <span>OSCAR EVANS</span>
+            <a href="">MARKKO</a>
+      </center>
+    </div>
+
+
+    <div class="container-fluid main6">
+
+      <center>
+        <h5>WE WOULD LOVE TO KNOW YOU</h5>
+        <h2>GET IN TOUCH WITH US</h2>
+
+        <input type="text" placeholder="Name*">
+        <input type="email" placeholder="Email*">
+        <input type="text" placeholder="Subject*">
+        <br>
+        <textarea name="Massage*" id="" cols="120" rows="5" placeholder="Massage*"></textarea>
+        
+        <button>SEND EMAIL</button>
+      </center>
+    </div>
+
+
+    <div class="container-fluid main7">
+      <center>
+        <img src="img/101.png" alt="">
+
+        <i class="fa-brands fa-houzz"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-brands fa-asymmetrik"></i>
+        <i class="fa-regular fa-envelope-open"></i>
+
+        <p>Sanok &copy; Naapo 2024</p>
+      </center>
+    </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
